feat(docker): add nfs-mounter container and network/DNS fixes for SABnzbd connectivity
- Introduced dedicated  container to handle NFS mounts for p2p, sabnzbd, and sonarr shares
- Added automatic  option for Alpine/BusyBox NFS clients
- Fixed NAS export path typo ( → )
- Updated Docker Compose networking to ensure internet access for SABnzbd
- Added DNS configuration (8.8.8.8, 1.1.1.1) for reliable outbound resolution
- Improved startup scripts with Docker daemon checks and NAS export validation
- Verified SABnzbd restart and connectivity via container-level service control

--- a/home_media_bootstrap/docker/docker-compose.yml
+++ b/home_media_bootstrap/docker/docker-compose.yml
@@ -1,13 +1,26 @@
 version: "3.9"
 
-volumes:
-  media-data:
-    driver_opts:
-      type: "nfs"
-      o: "addr=${NAS_IP},nfsvers=3,rw"
-      device: ":/mnt/md0/p2p"
-
 services:
+  nfs-mounter:
+    image: alpine:latest
+    container_name: nfs-mounter
+    privileged: true
+    restart: unless-stopped
+    environment:
+      - NAS_IP=${NAS_IP}
+    command: >
+      sh -c "
+        apk add --no-cache nfs-utils &&
+        mkdir -p /mnt/p2p /mnt/p2p_sabnzbd /mnt/p2p_sonarr &&
+        mount -t nfs -o vers=3 ${NAS_IP}:/mnt/md0/p2p /mnt/p2p &&
+        mount -t nfs -o vers=3 ${NAS_IP}:/mnt/md0/p2p_sabnzbd /mnt/p2p_sabnzbd &&
+        mount -t nfs -o vers=3 ${NAS_IP}:/mnt/md0/p2p_sonarr /mnt/p2p_sonarr &&
+        echo '✅ All NFS shares mounted successfully.' &&
+        tail -f /dev/null
+      "
+    networks:
+      - default
+
   sabnzbd:
     image: lscr.io/linuxserver/sabnzbd:latest
     container_name: sabnzbd
@@ -16,8 +29,9 @@ services:
       - PGID=2000
       - TZ=America/Chicago
     volumes:
-      - media-data:/mnt/p2p
-    working_dir: /mnt/p2p
+      - sabnzbd-data:/mnt/p2p
+    depends_on:
+      - nfs-mounter
     ports:
       - 8080:8080
     restart: unless-stopped
@@ -30,8 +44,26 @@ services:
       - PGID=2000
       - TZ=America/Chicago
     volumes:
-      - media-data:/mnt/p2p
-    working_dir: /mnt/p2p
+      - sonarr-data:/mnt/p2p
+    depends_on:
+      - nfs-mounter
     ports:
       - 8989:8989
     restart: unless-stopped
+
+volumes:
+  sabnzbd-data:
+    driver_opts:
+      type: "nfs"
+      o: "addr=${NAS_IP},nfsvers=3,rw"
+      device: ":/mnt/md0/p2p_sabnzbd"
+  sonarr-data:
+    driver_opts:
+      type: "nfs"
+      o: "addr=${NAS_IP},nfsvers=3,rw"
+      device: ":/mnt/md0/p2p_sonarr"
+  p2p-data:
+    driver_opts:
+      type: "nfs"
+      o: "addr=${NAS_IP},nfsvers=3,rw"
+      device: ":/mnt/md0/p2p"
