--- a/home_media_bootstrap/docker/docker-compose.yml
+++ b/home_media_bootstrap/docker/docker-compose.yml
@@ -12,9 +12,9 @@ services:
       sh -c "
         apk add --no-cache nfs-utils &&
         mkdir -p /mnt/p2p /mnt/p2p_sabnzbd /mnt/p2p_sonarr &&
-        mount -t nfs -o vers=3 ${NAS_IP}:/mnt/md0/p2p /mnt/p2p &&
-        mount -t nfs -o vers=3 ${NAS_IP}:/mnt/md0/p2p_sabnzbd /mnt/p2p_sabnzbd &&
-        mount -t nfs -o vers=3 ${NAS_IP}:/mnt/md0/p2p_sonarr /mnt/p2p_sonarr &&
+        mount -t nfs -o vers=3,nolock ${NAS_IP}:/mnt/md0/p2p /mnt/p2p &&
+        mount -t nfs -o vers=3,nolock ${NAS_IP}:/mnt/md0/p2p_sabnzbd /mnt/p2p_sabnzbd &&
+        mount -t nfs -o vers=3,nolock ${NAS_IP}:/mnt/md0/p2p_sonarr /mnt/p2p_sonarr &&
         echo '✅ All NFS shares mounted successfully.' &&
         tail -f /dev/null
       "
@@ -29,7 +29,7 @@ services:
       - PGID=2000
       - TZ=America/Chicago
     volumes:
-      - sabnzbd-data:/mnt/p2p
+      - sabnzbd-data:/config
     depends_on:
       - nfs-mounter
     ports:
@@ -55,15 +55,15 @@ volumes:
   sabnzbd-data:
     driver_opts:
       type: "nfs"
-      o: "addr=${NAS_IP},nfsvers=3,rw"
+      o: "addr=${NAS_IP},nfsvers=3,nolock,rw"
       device: ":/mnt/md0/p2p_sabnzbd"
   sonarr-data:
     driver_opts:
       type: "nfs"
-      o: "addr=${NAS_IP},nfsvers=3,rw"
+      o: "addr=${NAS_IP},nfsvers=3,nolock,rw"
       device: ":/mnt/md0/p2p_sonarr"
   p2p-data:
     driver_opts:
       type: "nfs"
-      o: "addr=${NAS_IP},nfsvers=3,rw"
+      o: "addr=${NAS_IP},nfsvers=3,nolock,rw"
       device: ":/mnt/md0/p2p"
