fix(sabnzbd): resolve hostname verification and API access issues
- Added explicit  configuration for SABnzbd to allow Docker bridge and LAN subnets
- Fixed 'Access denied - Hostname verification failed' when Sonarr connects via internal Docker network
- Verified connectivity between containers using SAB's container name ()
- Documented troubleshooting steps and config file location ()
- Confirmed API access via internal curl test with valid API key

--- a/home_media_bootstrap/docker/docker-compose.yml
+++ b/home_media_bootstrap/docker/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - TZ=America/Chicago
     volumes:
       - sabnzbd-data:/config
+      - p2p-data:/mnt/p2p
     depends_on:
       - nfs-mounter
     ports:
@@ -44,7 +45,8 @@ services:
       - PGID=2000
       - TZ=America/Chicago
     volumes:
-      - sonarr-data:/mnt/p2p
+      - sonarr-data:/config
+      - p2p-data:/mnt/p2p
     depends_on:
       - nfs-mounter
     ports:
